src/test/resources/entity_test/invalid/Employee2.entity
Employee2{
    id : integer {@Id};
}
Employee3{ // unexpected lines after fields definition
    id : integer {@Id};
}